--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,10 +38,11 @@
                   <label class="form-label" for="passwordid">Password</label>
                 </div>
 
-                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button> <!-- data-mdb-button-init data-mdb-ripple-init ????-->
+                  <button class="btn btn-outline-light btn-md px-5" type="submit">Login</button>
+<!--                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button> &lt;!&ndash; data-mdb-button-init data-mdb-ripple-init ????&ndash;&gt;-->
 
               </div>
-              <p class="btn footer-sm-text">Register new account</p>
+              <p class="btn btn-sm footer-sm-text">Register new account</p>
 
             </div>
           </div>
