--- a/src/main/resources/templates/studios/single-studio.html
+++ b/src/main/resources/templates/studios/single-studio.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="p-2">
-            <ul class="list-group list-group-flush">
+            <ul class="list-group list-group-flush bg-light">
                 <li class="list-group-item" th:text="'ID: ' + ${studio.studioId}" />
                 <li class="list-group-item" th:text="'Name: ' + ${studio.name}" />
                 <li class="list-group-item" th:text="'Headquaters: ' + ${studio.location}" />
@@ -38,7 +38,7 @@
                 <p class="h4" th:text="'Produced by ' + ${studio.name} + ':'" />
             </div>
 
-            <div class="list-group pb-3">
+            <div class="list-group bg-light pb-3">
                 <a th:each="movie : ${studio.movies}" th:href="@{'/movies/' + ${movie.movieId}}" class="list-group-item list-group-item-action">
                     <p class="mb-1" th:text="${movie.rating} + '/10'" />
 
