--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -50,8 +50,19 @@
                         <span class="p-3" th:text="${#authentication.principal.email}" />
                     </button>
                     <div class="dropdown-menu dropdown-menu-lg-end p-4">
-                        <span class="dropdown-item mb-3" th:text="'Username: ' + ${#authentication.name}"></span>
-                        <span class="dropdown-item mb-3" th:text="'Email: ' + ${#authentication.principal.email}"></span>
+                        <div class="dropdown-item-text mb-3">
+                                <i class="bi bi-person">
+                                    <span th:text="'Username: ' + ${#authentication.name}" />
+                                </i>
+<!--                            <span th:text="'Username: ' + ${#authentication.name}" />-->
+                        </div>
+<!--                        <span class="dropdown-item mb-3" th:text="'Username: ' + ${#authentication.name}"></span>-->
+                        <div class="dropdown-item-text mb-3">
+                            <i class="bi bi-envelope-heart">
+                                <span th:text="'Email: ' + ${#authentication.principal.email}" />
+                            </i>
+                        </div>
+<!--                        <span class="dropdown-item mb-3" th:text="'Email: ' + ${#authentication.principal.email}"></span>-->
                         <div class="text-center"> <!-- dropdown-item???? -->
                             <form th:action="@{/logout}" method="POST">
                                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
