--- a/src/main/scss/login_register.scss
+++ b/src/main/scss/login_register.scss
@@ -7,6 +7,11 @@
     background-image: radial-gradient(circle, #121870 ,#62686f);
 }
 
+.card {
+    --bs-card-bg: rgba(167, 167, 167, 0.25) !important;
+    backdrop-filter: blur(15px) !important;
+}
+
 .footer-sm-text {
     border-color: transparent;
     font-size: 0.95em;
